--- a/apps/crm/crm/src/app/crm/pages/waterfall-dashboard/waterfall-dashboard.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall-dashboard/waterfall-dashboard.component.html
@@ -23,40 +23,53 @@
     </h3>
   </section>
 
-  <bf-table *ngIf="currentState" [source]="currentState.orgs | keyvalue" clickable (rowClick)="displayStatementsToCreate($event.value.id)" useFilter pagination="50">
-    <ng-template colRef="value.id" label="Right Holder" let-id sort>
-      {{ getRightholderName(id) }}
-    </ng-template>
-    <ng-template colRef="value.revenu" label="Calculated Revenue" let-revenu sort>
-      <price-per-currency [price]="getPrice(revenu.calculated)"></price-per-currency>
-    </ng-template>
-    <ng-template colRef="value.revenu" label="Actual Revenue" let-revenu sort>
-      <strong>
-        <price-per-currency [price]="getPrice(revenu.actual)"></price-per-currency>
-      </strong>
-    </ng-template>
-    <ng-template colRef="value.id" label="Pending revenue" let-id sort>
-      <price-per-currency [price]="getPendingRevenue(id)"></price-per-currency>
-    </ng-template>
-    <ng-template colRef="value.id" label="Statements to create" let-id sort>
-      {{ statementsToCreate(id).length }}
-    </ng-template>
-    <ng-template colRef="value.turnover" label="Turnover" let-turnover sort>
-      <price-per-currency [price]="getPrice(turnover.actual)"></price-per-currency>
-    </ng-template>
-  </bf-table>
+  <ng-container *ngIf="currentState">
+    <h3>Rightholders summary</h3>
+    <bf-table [source]="currentState.orgs | keyvalue" useFilter pagination="50">
+      <ng-template colRef="value.id" label="Right Holder" let-id sort>
+        {{ getRightholderName(id) }}
+      </ng-template>
+      <ng-template colRef="value.id" label="Roles" let-id sort>
+        {{ getRightholder(id).roles | toLabel: 'rightholderRoles' }}
+      </ng-template>
+      <ng-template colRef="value.revenu" label="Calculated Revenue" let-revenu sort>
+        <price-per-currency [price]="getPrice(revenu.calculated)"></price-per-currency>
+      </ng-template>
+      <ng-template colRef="value.revenu" label="Actual Revenue" let-revenu sort>
+        <strong>
+          <price-per-currency [price]="getPrice(revenu.actual)"></price-per-currency>
+        </strong>
+      </ng-template>
+      <ng-template colRef="value.id" label="Pending revenue" let-id sort>
+        <price-per-currency [price]="getPendingRevenue(id)"></price-per-currency>
+      </ng-template>
+      <ng-template colRef="value.turnover" label="Turnover" let-turnover sort>
+        <price-per-currency [price]="getPrice(turnover.actual)"></price-per-currency>
+      </ng-template>
+    </bf-table>
 
-  <article *ngIf="pendingStatements.length">
-    <h3>Pending statements</h3>
-    <bf-table [source]="pendingStatements" clickable useFilter pagination="50">
+    <h3>Statements to create</h3>
+    <bf-table [source]="producersOrCoproducers" clickable (rowClick)="displayRightholderStatements($event.id)" useFilter pagination="50">
+      <ng-template colRef="name" label="Right Holder" let-name sort>
+        {{ name }}
+      </ng-template>
+      <ng-template colRef="roles" label="Roles" let-roles sort>
+        {{ roles | toLabel: 'rightholderRoles' }}
+      </ng-template>
+      <ng-template colRef="id" label="Statements to create" let-id sort>
+        {{ statementsToCreate(id).length }}
+      </ng-template>
+    </bf-table>
+  </ng-container>
+
+  <article *ngIf="rightholderStatements?.pending.length">
+    <h3>Pending statements for "{{ getRightholderName(rightholderStatements.rightholderId) }}"</h3>
+    <bf-table [source]="rightholderStatements.pending" useFilter pagination="50">
       <ng-template colRef="type" label="Type" let-type sort>
-        {{ type | toLabel: 'rightholderRoles' }}
+        {{ type | toLabel: 'statementType' }}
       </ng-template>
       <ng-template colRef="" label="Contract Id" let-item sort>
         {{ getCurrentContract(item) }}
-      </ng-template>
-      <ng-template colRef="rightholderId" label="Rightholder" let-rightholderId sort>
-        {{ getRightholderName(rightholderId) }}
       </ng-template>
       <ng-template colRef="duration.from" label="From" let-from sort defaultSort>
         {{ from | date: 'dd/MM/yyyy' }}
@@ -64,10 +77,45 @@
       <ng-template colRef="duration.to" label="To" let-to sort defaultSort>
         {{ to | date: 'dd/MM/yyyy' }}
       </ng-template>
+      <ng-template colRef="incomeIds" label="Sources" let-incomeIds sort defaultSort>
+        {{ getIncomesSources(incomeIds) | join:'name' | maxLength:75 }}
+      </ng-template>
       <ng-template colRef="" label="Actions" let-statement sticky>
-        <button mat-icon-button target="_blank" (click)="createStatement(statement);$event.stopPropagation()">
-          <mat-icon svgIcon="add" matTooltip="Go to statement"></mat-icon>
+        <button mat-icon-button (click)="createStatement(statement, false);">
+          <mat-icon svgIcon="add" matTooltip="Create statement"></mat-icon>
         </button>
+        <button mat-icon-button (click)="createStatement(statement);">
+          <mat-icon svgIcon="launch" matTooltip="Create and go to statement"></mat-icon>
+        </button>
+      </ng-template>
+    </bf-table>
+  </article>
+
+  <article *ngIf="rightholderStatements?.existing.length">
+    <h3>Existing statements for "{{ getRightholderName(rightholderStatements.rightholderId) }}"</h3>
+    <bf-table [source]="rightholderStatements.existing" useFilter pagination="50">
+      <ng-template colRef="type" label="Type" let-type sort>
+        {{ type | toLabel: 'statementType' }}
+      </ng-template>
+      <ng-template colRef="" label="Contract Id" let-item sort>
+        {{ getCurrentContract(item) }}
+      </ng-template>
+      <ng-template colRef="status" label="Status" let-status sort>
+        {{ status | toLabel: 'statementStatus' }}
+      </ng-template>
+      <ng-template colRef="duration.from" label="From" let-from sort defaultSort>
+        {{ from | date: 'dd/MM/yyyy' }}
+      </ng-template>
+      <ng-template colRef="duration.to" label="To" let-to sort defaultSort>
+        {{ to | date: 'dd/MM/yyyy' }}
+      </ng-template>
+      <ng-template colRef="incomeIds" label="Sources" let-incomeIds sort defaultSort>
+        {{ getIncomesSources(incomeIds) | join:'name' | maxLength:75 }}
+      </ng-template>
+      <ng-template colRef="id" label="Actions" let-statementId sticky>
+        <a mat-icon-button target="_blank" [routerLink]="['/c/o/dashboard/crm/waterfall', waterfall.id, 'statement', statementId]">
+          <mat-icon svgIcon="launch" matTooltip="Go to statement"></mat-icon>
+        </a>
       </ng-template>
     </bf-table>
   </article>
