--- a/apps/waterfall/waterfall/src/app/dashboard/title/financing-plan/financing-plan.component.html
+++ b/apps/waterfall/waterfall/src/app/dashboard/title/financing-plan/financing-plan.component.html
@@ -1,2 +1,1 @@
-<!-- TODO remove the image form the assets folder -->
-<img src="/assets/images/demo-cannes/documents.svg" />
+<img [src]="path" (click)="switch()"/>
