--- a/apps/waterfall/waterfall/src/app/dashboard/title/charts/charts.component.html
+++ b/apps/waterfall/waterfall/src/app/dashboard/title/charts/charts.component.html
@@ -1,3 +1,1 @@
-<!-- TODO remove the image form the assets folder -->
-<img src="/assets/images/demo-cannes/chart-2.png" />
-<img src="/assets/images/demo-cannes/chart-1.png" />
+<img [src]="path" (click)="switch()"/>
