added rightholder profit graph

--- a/apps/crm/crm/src/app/crm/pages/waterfall-rightholder/waterfall-rightholder.component.scss
+++ b/apps/crm/crm/src/app/crm/pages/waterfall-rightholder/waterfall-rightholder.component.scss
@@ -14,9 +14,21 @@ h3 {
 
 section {
   display: flex;
-  align-items: center;
   gap: 16px;
-  static-select {
-    width: 30%
+  justify-content: space-between;
+
+  article {
+    width: 60%;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    static-select {
+      width: 30%
+    }
+  }
+
+  apx-chart {
+    width: 30%;
   }
 }
+
