--- a/apps/crm/crm/src/app/crm/pages/waterfall-dashboard/waterfall-dashboard.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall-dashboard/waterfall-dashboard.component.html
@@ -25,7 +25,7 @@
 
   <ng-container *ngIf="currentState">
     <h3>Rightholders summary</h3>
-    <bf-table [source]="currentState.orgs | keyvalue" useFilter pagination="50">
+    <bf-table [source]="currentState.orgs | keyvalue" useFilter clickable (rowClick)="goTo('rightholder', $event.value.id)" pagination="50">
       <ng-template colRef="value.id" label="Right Holder" let-id sort>
         {{ getRightholderName(id) }}
       </ng-template>
@@ -45,6 +45,14 @@
       </ng-template>
       <ng-template colRef="value.turnover" label="Turnover" let-turnover sort>
         <price-per-currency [price]="getPrice(turnover.actual)"></price-per-currency>
+      </ng-template>
+      <ng-template colRef="value" label="Distributed" let-org sort>
+        <price-per-currency [price]="getPrice(org.turnover.actual - org.revenu.actual)"></price-per-currency>
+      </ng-template>
+      <ng-template colRef="value" label="Action" let-rightholder sticky>
+        <a mat-icon-button target="_blank" [routerLink]="['/c/o/dashboard/crm/waterfall', waterfall.id, 'rightholder', rightholder.id]" (click)="$event.stopPropagation()">
+          <mat-icon svgIcon="launch"></mat-icon>
+        </a>
       </ng-template>
     </bf-table>
 
@@ -93,7 +101,7 @@
 
   <article *ngIf="rightholderStatements?.existing.length">
     <h3>Existing statements for "{{ getRightholderName(rightholderStatements.rightholderId) }}"</h3>
-    <bf-table [source]="rightholderStatements.existing" useFilter pagination="50">
+    <bf-table [source]="rightholderStatements.existing" useFilter clickable (rowClick)="goTo('statement', $event.id)" pagination="50">
       <ng-template colRef="type" label="Type" let-type sort>
         {{ type | toLabel: 'statementType' }}
       </ng-template>
