--- a/apps/crm/crm/src/app/crm/pages/waterfall-rightholder/waterfall-rightholder.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall-rightholder/waterfall-rightholder.component.html
@@ -24,8 +24,7 @@
       [chart]="{ type: 'bar', stacked: true }" 
       [series]="options.series"
       [xaxis]="options.xAxis"
-      [dataLabels]="formatter.percent"
-      [tooltip]="{ y: formatter.percent }">
+      [tooltip]="{ y: formatter }">
     </apx-chart>
   </section>
 
