--- a/apps/crm/crm/src/app/crm/pages/waterfall-statement/waterfall-statement.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall-statement/waterfall-statement.component.html
@@ -33,8 +33,7 @@
       [chart]="{ type: 'bar' }" 
       [series]="options.series"
       [xaxis]="options.xAxis"
-      [dataLabels]="formatter.percent"
-      [tooltip]="{ y: formatter.percent }">
+      [tooltip]="{ y: formatter }">
     </apx-chart>
   </section>
 
