added income per source graph

--- a/apps/crm/crm/src/app/crm/pages/waterfall-dashboard/waterfall-dashboard.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall-dashboard/waterfall-dashboard.component.html
@@ -9,18 +9,26 @@
   <h3>Dashboard - {{ version.name }}</h3>
 
   <section>
-    <mat-form-field appearance="fill">
-      <mat-label>Statements</mat-label>
-      <mat-select (selectionChange)="selectBlock($event.value)" [(value)]="currentBlock">
-        <mat-option *ngFor="let block of statementBlocks" [value]="block.id">
-          {{ block.name }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+    <article>
+      <mat-form-field appearance="fill">
+        <mat-label>Statements</mat-label>
+        <mat-select (selectionChange)="selectBlock($event.value)" [(value)]="currentBlock">
+          <mat-option *ngFor="let block of statementBlocks" [value]="block.id">
+            {{ block.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
 
-    <h3 *ngIf="currentState">
-      Total film revenue : <price-per-currency [price]="getTotalIncomes(currentState.incomes)"></price-per-currency>
-    </h3>
+      <h3 *ngIf="currentState">
+        Total film revenue : <price-per-currency [price]="getTotalIncomes(currentState.incomes)"></price-per-currency>
+      </h3>
+    </article>
+    <apx-chart *ngIf="options.series.length"
+      [chart]="{ type: 'bar', stacked: true }" 
+      [series]="options.series"
+      [xaxis]="options.xAxis"
+      [tooltip]="{ y: formatter }">
+    </apx-chart>
   </section>
 
   <ng-container *ngIf="currentState">
