--- a/apps/crm/crm/src/app/crm/pages/waterfall-dashboard/waterfall-dashboard.component.scss
+++ b/apps/crm/crm/src/app/crm/pages/waterfall-dashboard/waterfall-dashboard.component.scss
@@ -14,6 +14,17 @@ h3 {
 
 section {
   display: flex;
-  align-items: center;
   gap: 16px;
+  justify-content: space-between;
+
+  article {
+    width: 40%;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+  }
+
+  apx-chart {
+    width: 60%;
+  }
 }
