--- a/apps/crm/crm/src/app/crm/pages/waterfall-document/waterfall-document.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall-document/waterfall-document.component.html
@@ -13,6 +13,7 @@
 
     <section>
       <ul>
+        <li><strong>Type:</strong> {{ contract.type | toLabel: 'rightholderRoles' }}</li>
         <li><strong>Licensor :</strong> {{ getRightholderName(contract.sellerId) }}</li>
         <li><strong>Licensee :</strong> {{ getRightholderName(contract.buyerId) }}</li>
         <li><strong>Signature date :</strong> {{  contract.signatureDate | date: 'MM/dd/yyyy' }}</li>
@@ -52,65 +53,69 @@
     </ng-container>
 
     <ng-container *ngIf="contract | getTermsFromContract | async as terms">
-      <h3>Terms</h3>
-      <bf-table [source]="terms" useFilter pagination="50">
-        <ng-template colRef="id" label="Id" let-id sort>
-          {{ id }}
+      <ng-container *ngIf="terms.length">
+        <h3>Terms</h3>
+        <bf-table [source]="terms" useFilter pagination="50">
+          <ng-template colRef="id" label="Id" let-id sort>
+            {{ id }}
+          </ng-template>
+          <ng-template colRef="territories" label="Territories" let-territories>
+            <span class="group-label" (click)="openDetails(territories, 'territories')">
+              <p class="ellipsis">
+                {{ territories | toGroupLabel:'territories':'World' | join }}
+              </p>
+            </span>
+          </ng-template>
+          <ng-template colRef="medias" label="Rights" let-medias>
+            <span class="group-label" (click)="openDetails(medias, 'medias')">
+              {{ medias | toGroupLabel:'medias':'All'| join }}
+            </span>
+          </ng-template>
+          <ng-template colRef="duration.from" label="Terms Start Date" let-from>
+            <ng-container *ngIf="from else noDuration">
+              {{ from | date:'MM/dd/yyyy' }}
+            </ng-container>
+          </ng-template>
+          <ng-template colRef="duration.to" label="Terms End Date" let-to>
+            <ng-container *ngIf="to else noDuration">
+              {{ to | date:'MM/dd/yyyy' }}
+            </ng-container>
+          </ng-template>
+          <ng-template colRef="" label="Price" let-item sort>
+            <ng-container *ngIf="item.price else noPrice">
+              <price-per-currency [price]="getTermAmount(item)"></price-per-currency>
+            </ng-container>
+            <ng-template #noPrice>--</ng-template>
+          </ng-template>
+        </bf-table>
+        <ng-template #noDuration>
+          Same as contract
         </ng-template>
-        <ng-template colRef="territories" label="Territories" let-territories>
-          <span class="group-label" (click)="openDetails(territories, 'territories')">
-            <p class="ellipsis">
-              {{ territories | toGroupLabel:'territories':'World' | join }}
-            </p>
-          </span>
-        </ng-template>
-        <ng-template colRef="medias" label="Rights" let-medias>
-          <span class="group-label" (click)="openDetails(medias, 'medias')">
-            {{ medias | toGroupLabel:'medias':'All'| join }}
-          </span>
-        </ng-template>
-        <ng-template colRef="duration.from" label="Terms Start Date" let-from>
-          <ng-container *ngIf="from else noDuration">
-            {{ from | date:'MM/dd/yyyy' }}
-          </ng-container>
-        </ng-template>
-        <ng-template colRef="duration.to" label="Terms End Date" let-to>
-          <ng-container *ngIf="to else noDuration">
-            {{ to | date:'MM/dd/yyyy' }}
-          </ng-container>
-        </ng-template>
-        <ng-template colRef="" label="Price" let-item sort>
-          <ng-container *ngIf="item.price else noPrice">
-            <price-per-currency [price]="getTermAmount(item)"></price-per-currency>
-          </ng-container>
-          <ng-template #noPrice>--</ng-template>
-        </ng-template>
-      </bf-table>
-      <ng-template #noDuration>
-        Same as contract
-      </ng-template>
+      </ng-container>
     </ng-container>
 
-    <h3>Rights</h3>
-    <bf-table [source]="rights" clickable useFilter pagination="50">
-      <ng-template colRef="id" label="Id" let-id sort>
-        {{ id }}
-        <button mat-icon-button [cdkCopyToClipboard]="id" (click)="$event.stopPropagation()">
-          <mat-icon svgIcon="file_copy"></mat-icon>
-        </button>
-      </ng-template>
-      <ng-template colRef="name" label="Name" let-name sort>
-        {{ name }}
-      </ng-template>
-      <ng-template colRef="rightholderId" label="Rightholder" let-rightholderId sort>
-        {{ getRightholderName(rightholderId) }}
-      </ng-template>
-      <ng-template colRef="type" label="Type" let-type sort>
-        {{ type | toLabel: 'rightTypes' }}
-      </ng-template>
-      <ng-template colRef="percent" label="%" let-percent>
-        {{ percent ? percent  : '--' }}
-      </ng-template>
-    </bf-table>
+    <ng-container *ngIf="rights.length">
+      <h3>Rights</h3>
+      <bf-table [source]="rights" clickable useFilter pagination="50">
+        <ng-template colRef="id" label="Id" let-id sort>
+          {{ id }}
+          <button mat-icon-button [cdkCopyToClipboard]="id" (click)="$event.stopPropagation()">
+            <mat-icon svgIcon="file_copy"></mat-icon>
+          </button>
+        </ng-template>
+        <ng-template colRef="name" label="Name" let-name sort>
+          {{ name }}
+        </ng-template>
+        <ng-template colRef="rightholderId" label="Rightholder" let-rightholderId sort>
+          {{ getRightholderName(rightholderId) }}
+        </ng-template>
+        <ng-template colRef="type" label="Type" let-type sort>
+          {{ type | toLabel: 'rightTypes' }}
+        </ng-template>
+        <ng-template colRef="percent" label="%" let-percent>
+          {{ percent ? percent  : '--' }}
+        </ng-template>
+      </bf-table>
+    </ng-container>
   </ng-container>
 </ng-container>
